--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
 <body>
 <h1 th:text="${linkurl}">Hello World</h1>
 <a href="http://www.google.com">标签连接</a>
+<img src="/640.jpg" alt="旺仔牛奶">
 </body>
 </html>
